# crucible

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  PR_DESCRIPTION.md  README.md  SECURITY.md  TODO.md  deny.toml
.github/: labels.yml  project-governance.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backend-ci.yml  ci.yml  supply-chain.yml
backend/: .env.example  Cargo.toml
backend/src/: error.rs  lib.rs  main.rs  router.rs
backend/src/config/: mod.rs  sanitize.rs  server.rs
backend/src/services/: audit.rs  business_metrics.rs  contract_benchmark.rs  gas_optimizer.rs  metrics.rs  mod.rs  sandbox.rs  sys_metrics.rs  tracing.rs  vulnerability_scanner.rs
backend/src/utils/: mod.rs  validators.rs
backend/src/workers/: mod.rs
backend/tests/: api_tests.rs  audit_tests.rs  config_tests.rs  contract_integration_tests.rs
backend/tests/integration/: health_test.rs  mod.rs
backend/tests/load/: profile_load.rs  status_load.rs
contracts/crucible/: Cargo.toml
contracts/crucible/src/: account.rs  cost.rs  env.rs  env_event_filter_tests.rs  event_topic_match.rs  fixture.rs  lib.rs  prelude.rs  reputation.rs  sim.rs  token.rs
contracts/crucible/test_snapshots/account/fixture_tests/: fixture_with_account_handles_supports_debug_clone_and_reset.1.json  fixture_with_account_handles_supports_debug_clone_and_reset.2.json
contracts/crucible/test_snapshots/account/tests/: test_account_handle_clone.1.json  test_account_handle_debug_omits_sensitive_fields.1.json
contracts/governance/src/: lib.rs
contracts/insurance/src/: lib.rs
contracts/oracle/src/: lib.rs
contracts/supply_chain/tests/: supply_chain_test.rs
contracts/treasury/src/: lib.rs
contracts/treasury/tests/: treasury_test.rs
crucible-macros/: Cargo.toml
crucible-macros/src/: lib.rs
examples-copy/escrow/src/: lib.rs
examples-copy/vesting/src/: lib.rs
examples/cross-contract/src/: lib.rs  test.rs
examples/dex/: Cargo.toml
examples/dex/src/: lib.rs
examples/emergency_stop/src/: lib.rs
examples/escrow/src/: lib.rs
examples/lendings/src/: lib.rs
examples/multisig/src/: lib.rs
examples/nft-marketplace/: Cargo.toml
examples/nft-marketplace/src/: lib.rs
examples/pending/src/: lib.rs
examples/prediction-market/src/: lib.rs
examples/staking/src/: lib.rs
examples/time_locked_vault/src/: lib.rs
examples/token/src/: property_test.rs  test.rs
examples/vesting copy/src/: lib.rs
examples/vesting/src/: lib.rs  test.rs
(+14 files in other folders)
