[package]
name = "crucible-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Proc-macro support for the crucible Soroban testing framework."
repository.workspace = true
homepage.workspace = true
keywords = ["soroban", "stellar", "testing", "smart-contracts", "macros"]
categories = ["development-tools::testing"]


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }
